# ge_tutorials

./: .gitignore  Dockerfile  docker-compose.yml  example_dbt_profile.yml  pyproject.toml  requirements.txt
airflow/: ge_tutorials_dag_with_great_expectations.py
airflow/dags/: ge_tutorials_dag_with_great_expectations.py
data/: contacts.csv
dbt/: .gitignore  dbt_project.yml
dbt/models/marts/: npi_with_state.sql
dbt/models/staging/npi/: npi.yml  src_npi.yml  stg_npi.sql  stg_npi.yml  stg_npi__providers.sql  stg_state_abbreviations.sql
great_expectations/: great_expectations.yml
great_expectations/expectations/count_providers_by_state/: critical.json
great_expectations/expectations/state_abbreviations_file/: critical.json
