[tool.poetry]
name = "ge_tutorials"
version = "0.1.0"
description = "Project to practice integrations between Airflow, AWS CDK, dbt, and Great Expectations"
authors = ["Blake Enyart <blake.enyart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
airflow-provider-great-expectations = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
